<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_informacion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Clases.InformacionActivity"
    android:weightSum="1">

    <TextView
        android:text="Licencia:"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtLicenciaInfor"
        android:layout_weight="0.08"
        android:textSize="20dp"
        android:textStyle="bold"/>

    <ImageView
        android:layout_width="332dp"
        android:layout_height="90dp"
        app:srcCompat="@drawable/creativecommons"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/CreativeCommons"
        android:layout_weight="0.08" />

    <TextView
        android:text="Autores:"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtAutoresInfor"
        android:paddingTop="15sp"
        android:layout_weight="0.08"
        android:textSize="20dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtAutorIvan"
        android:textColor="@color/colorPrimary"
        android:textSize="18dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/txtAutorGonzalo"
        android:textColor="@color/colorPrimary"
        android:textSize="18dp"
        android:textStyle="bold"/>

    <TextView
        android:text="@string/txtContacto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtContactoInfor"
        android:paddingTop="15sp"
        android:layout_weight="0.08"
        android:textSize="20dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/EmailApp"
        android:textColor="@color/colorPrimary"
        android:textSize="18dp"
        android:textStyle="bold"/>

</LinearLayout>
