<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_visor_dream"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

    <TextView
        android:id="@+id/labelHora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtDia"
        android:layout_marginRight="1dp"/>

    <EditText
        android:id="@+id/horaC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/labelHora"
        android:layout_toRightOf="@id/labelHora"
        android:layout_alignParentRight="true"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"/>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_below="@id/labelHora"
        android:id="@+id/labelTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EditTitulo"
        android:layout_marginRight="1dp"/>

    <EditText
        android:id="@+id/tituloC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/labelTitulo"
        android:layout_toRightOf="@id/labelTitulo"
        android:layout_alignParentRight="true"/>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_below="@id/labelTitulo"
        android:id="@+id/labelDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EditDescripcion"
        android:layout_marginRight="1dp"/>

    <EditText
        android:id="@+id/descripcionC"
        android:layout_width="match_parent"
        android:inputType="textMultiLine"
        android:ems="10"
        android:layout_height="200dp"
        android:layout_below="@+id/labelDescripcion"
        android:layout_alignParentEnd="true"
        android:gravity="top"/>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_below="@id/descripcionC"
        android:id="@+id/labelNivel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NivelDescripcion"
        android:layout_marginRight="1dp"/>

    <Spinner
        android:id="@+id/nivel"
        android:layout_width="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/labelNivel"
        android:layout_alignBaseline="@id/labelNivel"
        android:entries="@array/niveles"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_crear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_backup_black_24dp" />

</RelativeLayout>
